--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             </div>
         </div>
     </div>
-    
     <!-- Modal video -->
-    <div class="modal fade" id="embedModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="embedModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -167,8 +167,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="embed-responsive embed-responsive-4by3">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kz0iYkl2XTk" allowfullscreen></iframe>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/kz0iYkl2XTk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kz0iYkl2XTk"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
