--- a/index.html
+++ b/index.html
@@ -1237,6 +1237,6 @@
             </div>
         </article>
     </div>
-</footer><script src="assets/js/app.js"></script>
+</footer><script async src="assets/js/app.js"></script>
 </body>
 </html>
