--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vishivka</title>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="body">
+
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
     <div class="container">
@@ -39,7 +40,7 @@
                     >
                                 <span class="d-flex align-items-center">
                                        <span class="badge-primary p-3 p-sm-4 p-md-3 text-white">
-                                   <i class="fas fa-phone-alt"></i></span>
+                                           <i class="fas fa-phone-alt"></i></span>
                                 <span class="d-none d-lg-block px-3">+7(495) 777 77 77</span>
                                 </span>
                     </button>
@@ -90,7 +91,7 @@
                     >
                                 <span class="d-flex align-items-center">
                                        <span class="badge-primary p-3 p-sm-4 p-md-3 text-white">
-                                   <i class="fas fa-phone-alt"></i></span>
+                                           <i class="fas fa-phone-alt"></i></span>
                                 <span class="d-none d-lg-block px-3">+7(495) 777 77 77</span>
                                 </span>
                     </button>
@@ -1062,7 +1063,7 @@
                             >
                                         <span class="d-flex align-items-center">
                                                <span class="badge-primary p-3 p-sm-4 p-md-3 text-white">
-                                           <i class="fas fa-phone-alt"></i></span>
+                                                   <i class="fas fa-phone-alt"></i></span>
                                         <span class="d-none d-lg-block px-3">+7(495) 777 77 77</span>
                                         </span>
                             </button>
@@ -1129,7 +1130,7 @@
                                                 >
                                                             <span class="d-flex align-items-center">
                                                                    <span class="badge-primary p-3 p-sm-4 p-md-3 text-white">
-                                                               <i class="fas fa-phone-alt"></i></span>
+                                                                       <i class="fas fa-phone-alt"></i></span>
                                                             <span class="d-none d-lg-block px-3">+7(495) 777 77 77</span>
                                                             </span>
                                                 </button>
@@ -1195,7 +1196,7 @@
                                             >
                                                         <span class="d-flex align-items-center">
                                                                <span class="badge-primary p-3 p-sm-4 p-md-3 text-white">
-                                                           <i class="fas fa-phone-alt"></i></span>
+                                                                   <i class="fas fa-phone-alt"></i></span>
                                                         <span class="d-none d-lg-block px-3">+7(495) 777 77 77</span>
                                                         </span>
                                             </button>
