--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="embed-responsive embed-responsive-4by3">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kz0iYkl2XTk"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3x-DjgdrHB8"
                                 allowfullscreen></iframe>
                     </div>
                 </div>
