--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vishivka</title>
-    <script src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
     <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body class="body">
-
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0">
     <div class="container">
@@ -1237,6 +1235,7 @@
             </div>
         </article>
     </div>
-</footer><script async src="assets/js/app.js"></script>
+</footer><script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" data-auto-replace-svg="nest"></script>
+<script async src="assets/js/app.js"></script>
 </body>
 </html>
