--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <div class=" table-responsive-sm table-responsive-md">
+                                    <div class=" table-responsive">
                                         <table class="table table-hover table-bordered border-0">
                                             <thead>
                                             <tr>
@@ -300,7 +300,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -324,7 +324,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -348,7 +348,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -372,7 +372,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -396,7 +396,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -431,7 +431,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <div class=" table-responsive-sm table-responsive-md">
+                                    <div class=" table-responsive">
                                         <table class="table table-hover table-bordered border-0">
                                             <thead>
                                             <tr>
@@ -455,7 +455,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -479,7 +479,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -503,7 +503,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -527,7 +527,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -551,7 +551,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -586,7 +586,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <div class=" table-responsive-sm table-responsive-md">
+                                    <div class=" table-responsive">
                                         <table class="table table-hover table-bordered border-0">
                                             <thead>
                                             <tr>
@@ -610,7 +610,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -634,7 +634,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -658,7 +658,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -682,7 +682,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -706,7 +706,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -741,7 +741,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <div class=" table-responsive-sm table-responsive-md">
+                                    <div class=" table-responsive">
                                         <table class="table table-hover table-bordered border-0">
                                             <thead>
                                             <tr>
@@ -765,7 +765,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -789,7 +789,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -813,7 +813,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -837,7 +837,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
@@ -861,7 +861,7 @@
                                                     100 штук в день
                                                 </td>
                                                 <td class="align-bottom text-center">
-                                                    <p class="m-auto">
+                                                    <p class="my-auto">
                                                         <button type="button"
                                                                 class="btn btn-success btn-lg text-white "
                                                                 data-toggle="modal"
